Open platform -> Open experiments :) (more playful)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,6 +1,6 @@
 {
   "infinity.components.Header.title": "INFINITY",
-  "infinity.components.Header.subtitle": "Open Platform to Realize Global Goals.",
+  "infinity.components.Header.subtitle": "Open Experiments for Global Goals.",
   "infinity.scenes.Home.Menu.title": "Home",
   "infinity.scenes.Home.TopicList.noTopics": "No topics. Try to change filter parameters.",
   "infinity.scenes.Home.HomeConfigPanel.search": "Search",
