--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,6 +1,6 @@
 {
   "infinity.components.Header.title": "無限",
-  "infinity.components.Header.subtitle": "グローバルな目的を実現するオープンプラットフォーム。",
+  "infinity.components.Header.subtitle": "グローバルな目的を実現するためのオープン実験。",
   "infinity.scenes.Home.Menu.title": "ホーム",
   "infinity.scenes.Home.TopicList.noTopics": "トピックはありません。 フィルターパラメーターを変更してみてください。",
   "infinity.scenes.Home.HomeConfigPanel.search": "検索",
