--- a/src/translations/lt.json
+++ b/src/translations/lt.json
@@ -1,6 +1,6 @@
 {
   "infinity.components.Header.title": "INFINITI",
-  "infinity.components.Header.subtitle": "Atvira platforma globaliems tikslams siekti.",
+  "infinity.components.Header.subtitle": "Atviri eksperimentai globaliems tikslams.",
   "infinity.scenes.Home.Menu.title": "Pradžia",
   "infinity.scenes.Home.TopicList.noTopics": "Temų nerasta. Pabandykite pakeisti filtrų parametrus.",
   "infinity.scenes.Home.HomeConfigPanel.search": "Paieška",
