--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,6 +1,6 @@
 {
   "infinity.components.Header.title": "ИНФИНИТИ",
-  "infinity.components.Header.subtitle": "Открытые платформа для реализации глобальных целей.",
+  "infinity.components.Header.subtitle": "Открытые эксперименты для глобальных целей.",
   "infinity.scenes.Home.Menu.title": "Главная",
   "infinity.scenes.Home.TopicList.noTopics": "Нет постов. Пропробуйте изменить фильтр.",
   "infinity.scenes.Home.HomeConfigPanel.search": "Поиск",
