--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -1,6 +1,6 @@
 {
   "infinity.components.Header.title": "无界",
-  "infinity.components.Header.subtitle": "开放的平台为了实现全球的目标。",
+  "infinity.components.Header.subtitle": "开放的实验为了全球的目标。",
   "infinity.scenes.Home.Menu.title": "首页",
   "infinity.scenes.Home.TopicList.noTopics": "没有内容。尝试一下更改过滤设置。",
   "infinity.scenes.Home.HomeConfigPanel.search": "搜索",
