--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -93,7 +93,7 @@
   "infinity.scenes.TopicView.draft": "Draft",
   "infinity.scenes.TopicView.public": "Public",
   "infinity.scenes.TopicList.types": "Types",
-  "infinity.scenes.UserTransactions.homeLink": "Home",
+  "infinity.scenes.UserTransactions.homeLink": "Back",
   "infinity.scenes.UserTransactions.by": "Investment by",
   "infinity.scenes.UserTransactions.time": "Time",
   "infinity.scenes.UserTransactions.money": "Money",
