feature: add claimed time display

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -107,8 +107,8 @@
   "infinity.scenes.NoServer.such": "such",
   "infinity.scenes.Terms.tos": "Terms of service",
   "infinity.common.shortCountableHours.COUNT": "{count, number}{count, plural, =0 {''} one {h} other {h}}",
-  "infinity.components.Balance.balanceTooltip": "Balance",
-  "infinity.components.Balance.remainingQuotaTooltip": "Remaining quota",
+  "infinity.components.Balance.balanceTooltip": "Matched hours",
+  "infinity.components.Balance.remainingQuotaTooltip": "Investment quota",
   "infinity.common.Select.selectPlaceholder": "Select...",
   "infinity.common.Select.loadingPlaceholder": "Loading...",
   "infinity.common.Select.searchPromptText": "Type to search",
