--- a/src/translations/lt.json
+++ b/src/translations/lt.json
@@ -107,8 +107,8 @@
   "infinity.scenes.NoServer.such": "tokio",
   "infinity.scenes.Terms.tos": "Paslaugų teikimo sąlygos",
   "infinity.common.shortCountableHours.COUNT": "{count, number}{count, plural, =0 {''} one {h} other {h}}",
-  "infinity.components.Balance.balanceTooltip": "Balansas",
-  "infinity.components.Balance.remainingQuotaTooltip": "Likęs kreditas",
+  "infinity.components.Balance.balanceTooltip": "Suderintos valandos",
+  "infinity.components.Balance.remainingQuotaTooltip": "Investavimo kreditas",
   "infinity.common.Select.selectPlaceholder": "Pasirinkti...",
   "infinity.common.Select.loadingPlaceholder": "Krauname...",
   "infinity.common.Select.searchPromptText": "Rašykite paieškoti",
