--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -107,8 +107,8 @@
   "infinity.scenes.NoServer.such": "",
   "infinity.scenes.Terms.tos": "Условия использования",
   "infinity.common.shortCountableHours.COUNT": "{count, number}{count, plural, =0 {''} one {ч} other {ч}}",
-  "infinity.components.Balance.balanceTooltip": "Баланс",
-  "infinity.components.Balance.remainingQuotaTooltip": "Оставшаяся квота",
+  "infinity.components.Balance.balanceTooltip": "Время согласования",
+  "infinity.components.Balance.remainingQuotaTooltip": "Инвестиционная квота",
   "infinity.common.Select.selectPlaceholder": "Выбрать...",
   "infinity.common.Select.loadingPlaceholder": "Загрузка...",
   "infinity.common.Select.searchPromptText": "Начните печатать для поиска",
