--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -107,8 +107,8 @@
   "infinity.scenes.NoServer.such": "",
   "infinity.scenes.Terms.tos": "服务条款",
   "infinity.common.shortCountableHours.COUNT": "{count, number}{count, plural, =0 {''} one {h} other {h}}",
-  "infinity.components.Balance.balanceTooltip": "余额",
-  "infinity.components.Balance.remainingQuotaTooltip": "可用的金额",
+  "infinity.components.Balance.balanceTooltip": "匹配的小时",
+  "infinity.components.Balance.remainingQuotaTooltip": "投资额度",
   "infinity.common.Select.selectPlaceholder": "选择...",
   "infinity.common.Select.loadingPlaceholder": "加载中...",
   "infinity.common.Select.searchPromptText": "键入搜索",
